# trechos-musicas

./: README.md  pyproject.toml  testes.ipynb  trechos.py
